Changes from version 1.0.6 to 1.0.7
 * Restored a legacy control parameter for internal use

Changes from version 1.0.5 to 1.0.6
 * Fixed a case where the search would continue unnecessarily for some time after discovering the target distribution.

Changes from version 1.0.4 to 1.0.5
 * The resulting list of the 'dosearch' function call now has the class 'dosearch' with print and summary methods.
 * Added accessor functions 'get_formula', 'get_benchmark' and 'is_identifiable' to query an object of class 'dosearch'.
 * The function 'get_derivation' is now repurposed as an accessor function, only 'dosearch' is now supported for query identification.
 * The 'graph' argument of 'dosearch' now supports the igraph format used by the 'causaleffect' package (see 'dosearch' examples).
 * The 'graph' argument of 'dosearch' now supports DAGs created using the 'dagitty' package (see 'dosearch' examples).
 * Fixed an issue when using control(benchmark = TRUE).

Changes from version 1.0.3 to 1.0.4
 * Fixed compilation issues on some platforms.

Changes from version 1.0.2 to 1.0.3
 * Now supports context specific independences (CSIs) via labeled directed acyclic graphs (LDAGs). See the documentation and examples for more details.
 * The function 'get_derivation' can now also be called via 'dosearch'.
 * Bidirected edges can now also be given as '<->'.
 * Added a new control option, 'time_limit', which will terminate the search when the given amount of time (in hours) has passed (only when benchmark = TRUE).
 * Some redundant control options have been removed.
 * Fixed an issue with derivation rules when missing data was present.
 * Fixed an another minor issue regarding missing data.
 * Fixed a rare issue with formula generation.

Changes from version 1.0.1 to 1.0.2
 * Added an example on how to produce an image from the DOT derivation.
 * Added a warning when the response indicator for a proxy variable is not present in any data source.

Changes from version 1.0.0 to 1.0.1