@@ -27,10 +27,10 @@ Description: Identification of causal effects from arbitrary observational and e
     acyclic graphs (LDAG). For details on CSIs see Corander et al. (2019) <doi:10.1016/j.apal.2019.04.004>.
     For further information on the search-based approach see Tikka et al. (2019) <arXiv:1902.01073>. 
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.19), igraph, dagitty
+Imports: Rcpp (>= 0.12.19)
+Suggests: dagitty, DOT, igraph
 LinkingTo: Rcpp
 SystemRequirements: C++11
 NeedsCompilation: yes
 Author: Santtu Tikka [aut, cre] (<https://orcid.org/0000-0003-4039-4342>), Antti Hyttinen [ctb] (<https://orcid.org/0000-0002-6649-3229>), Juha Karvanen [ctb] (<https://orcid.org/0000-0001-5530-769X>)
 Maintainer: Santtu Tikka <santtuth@gmail.com>
-Suggests: DOT
