@@ -1,11 +1,6 @@
 useDynLib(dosearch, .registration=TRUE)
 export(dosearch, is_identifiable, get_formula, get_derivation, get_benchmark)
 importFrom(Rcpp, evalCpp)
-importFrom(igraph, E)
-importFrom(igraph, vertex_attr)
-importFrom(igraph, get.edges)
-importFrom(dagitty, graphType)
-importFrom(dagitty, edges)
 S3method(summary, dosearch)
 S3method(print, dosearch)
 S3method(print, summary.dosearch)
